--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Call required/dependent libraries or sources  -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
 <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
@@ -354,13 +354,13 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
 	
-	<script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-	<script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <meta charset="utf-8" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 	
 <!-- Map Design -->	
 	
@@ -403,7 +403,7 @@
 <body>
 	<div id="map" style="width: 600px; height: 300px"></div>
 
-	<script src="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 	
 	<script>
 
